Added new files

--- a/percentage.html
+++ b/percentage.html
@@ -7,39 +7,12 @@
   <title>Forex Calculator </title>
 </head>
 <body>
+  <header class="upperDiv">
+    <h1>Investments Calculator</h1>
+    <a href="infoPercentage.html"><img style="filter :invert(1)" src="more-info-icon.svg" height="30px"></a>
+  </header>
   <div class="contents-div">
 	<h1>Calculating Percent</h1>
-
-	
-	<table>
-	  <thead>
-	    <tr>
-	      <th>Deposit</th>
-	      <th>Profit</th>
-	      <th>Percentage</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	    <tr>
-	      <td>R1,000</td>
-	      <td>R10,000</td>
-	      <td>900%</td>
-	    </tr>
-	    <tr>
-	      <td>R1,000</td>
-	      <td>R100,000</td>
-	      <td>9,000%</td>
-	    </tr>
-	    <tr>
-	      <td>R1,000</td>
-	      <td>R1,000,000</td>
-	      <td>99,900%</td>
-	    </tr>
-	  </tbody>
-	</table>
-	
-	
-	<p class="description-text">When calculating the target you dont include your deposit.For example if you deposit <b>R1,000</b> and you target <b>R10,000</b> you are targeting <b>900%</b> .If you include your capital it will be <b>1000%</b></p>
 	<hr>
 	<div id="results-div">
 	  <p id="deposit-result"></p>
@@ -69,8 +42,8 @@
 	  
 	</div>
 	<hr>
-	<a class="calculate-percentage-text" href="index.html">Calculate target..</a>
-	<hr>
+	<a class="calculate-percentage-text" href="index.html"><button>Calculate target</button></a>
+	
 	<a href="https://www.forexfactory.com/">
 	  <button >Check news</button>
 	</a>
