--- a/index.html
+++ b/index.html
@@ -7,39 +7,12 @@
   <title>Forex Calculator </title>
 </head>
 <body>
+  <header>
+    <h1>Investments Calculator</h1>
+    <a href="infoTarget.html"><img style="filter :invert(1)" src="more-info-icon.svg" height="30px"></a>
+  </header>
   <div class="contents-div">
 	<h1>Calculating Target</h1>
-
-	
-	<table>
-	  <thead>
-	    <tr>
-	      <th>Deposit</th>
-	      <th>Percentage</th>
-	      <th>Target</th>
-	    </tr>
-	  </thead>
-	  <tbody>
-	    <tr>
-	      <td>R1,000</td>
-	      <td>1,000%</td>
-	      <td>R9,000</td>
-	    </tr>
-	    <tr>
-	      <td>R1,000</td>
-	      <td>10,000%</td>
-	      <td>R99,000</td>
-	    </tr>
-	    <tr>
-	      <td>R1,000</td>
-	      <td>100,000%</td>
-	      <td>R999,000</td>
-	    </tr>
-	  </tbody>
-	</table>
-	
-	<hr>
-	<p class="description-text">When calculating the target you dont include your deposit.For example if you deposit <b>R1,000</b> and you target <b>1,000%</b> you are targeting <b>R9,000</b> .If you include your capital it will be <b>R10,000</b></p>
 	<hr>
 	<div id="results-div">
 	  <p id="deposit-result"></p>
@@ -59,7 +32,7 @@
 	    
 	    <li>
 	      <label for="percentage-input">Percentage :</label>
-	      <input id="percentage-input"type="number" placeholder="Enter the percentage...">
+	      <input id="percentage-input"type="number" placeholder="Enter the percentage you are targeting...">
 	      <span id="percentage-text-warning"></span>
 	    </li>
 	    <li>
@@ -69,8 +42,8 @@
 	  
 	</div>
 	<hr>
-	<a class="calculate-percentage-text" href="percentage.html">Calculate percentage of profit..</a>
-	<hr>
+	<a class="calculate-percentage-text" href="percentage.html"><button>Calculate percentage of profit</button></a>
+
 	<a href="https://www.forexfactory.com/">
 	  <button >Check news</button>
 	</a>
