Added radio buttons

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 	      <button onclick="calculateTarget()">Calculate Target</button>
 	    </li>
 	  </ul>
+	  <div class="radios-div">
+	    <input name="currency" value="usc" type="radio" id="usc">
+	    <label for="usc">USC</label>
+	    <input name="currency" value="zar" type="radio" id="zar" checked>
+	    <label for="zar">ZAR</label>
+	    <input name="currency" value="usd" type="radio" id="usd">
+	    <label for="usd">USD</label>
+	  </div>
 	  
 	</div>
 	<hr>
